# mlops

./: README.md  SETUP.md  pyproject.toml
src/dashboard/: README.md  dashboard-admin.yml
src/grafana/: grafana-pv-pvc.yaml  values.yml
src/grafana-notused/: grafana.yml
src/kubeflow/: KUBEFLOW.md
src/langfuse/: README.md  docker-compose.yml  langfuse.yml
src/mlops/: zenstack.yml
src/otel/: otel.yml
src/otel/hf/: Dockerfile  README.md  build_and_push.sh  nginx.conf
src/prometheus/: grafana-service.txt  prometheus.txt  values-original.yml  values.yml
src/prometheus-notused/: PROMETHEUS.md  bkp.yml  prometheus.yml
src/wsl/: .wslconfig
