[project]
name = "mlops"
version = "0.1.0"
description = "A project containing a simple Kubeflow test pipeline."
requires-python = ">=3.9" # Assumes you are using Python 3.9+ now (3.12 is fine)
license = "MIT"
authors = [
  { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    # Required for building Kubeflow Pipelines
    "kfp>=2.15.0",
    "kubernetes>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "flake8>=6.0.0",
    "black>=23.0.0"
]

[build-system]
requires = ["setuptools>=61.0"] 
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# This tells setuptools to look for packages in the 'src' directory
where = ["src"] 
